tests/parsing/smtlib/poly/errors/142_declare-fun_arg_list_unclosed_1.psmt2
(set-logic ALL)
(declare-fun foo (int _))
